// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot w/ auth 1`] = `
<section
  className="boards"
>
  <header
    className="boards__header"
  >
    <h1
      className="boards__header-title"
    >
      All Boards
    </h1>
  </header>
  <Connect(BoardList) />
  <div>
    <Link
      className="btn"
      replace={false}
      to="/new-board"
    >
      Create New Board
    </Link>
  </div>
</section>
`;

exports[`matches snapshot w/out auth 1`] = `
<section
  className="boards"
>
  <header
    className="boards__header"
  >
    <h1
      className="boards__header-title"
    >
      All Boards
    </h1>
  </header>
  <Connect(BoardList) />
  <p>
    Sign up to create a new board.
  </p>
</section>
`;
